--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.8
+minecraft_version=1.21.5-rc2
+yarn_mappings=1.21.5-rc2+build.1
 loader_version=0.16.10
 
 # Mod Properties
@@ -14,4 +14,4 @@ maven_group=com.moulberry.graphite
 archives_base_name=graphitedatagenerator
 
 # Dependencies
-fabric_version=0.115.0+1.21.4
+fabric_version=0.119.4+1.21.5
